[project]
name = "ebyte-lora-e22-rpi"
version = "0.0.2"
authors = [
  { name="Renzo Mischianti", email="renzo@mischianti.org" },
]
maintainers = [
  { name="Renzo Mischianti", email="renzo@mischianti.org" },
]
keywords = ["LoRa", "UART", "EByte", "RaspberryPi", "sx1262", "sx1268", "e22"]
license = {file = "LICENSE.md"}
description = "RaspberryPi LoRa EBYTE E22 device library complete and tested. sx1262/sx1268"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python :: Implementation :: RaspberryPi",
        "License :: OSI Approved :: MIT License",
    ]

[project.urls]
homepage = "https://www.mischianti.org"
"Documentation" = "https://www.mischianti.org/category/my-libraries/ebyte-lora-e22-devices/"
"Documentazione" = "https://www.mischianti.org/it/category/le-mie-librerie/dispositivi-ebyte-lora-e22/"
"Repository" = "https://github.com/xreef/EByte_LoRa_E22_raspberrypi_library"
"Bug Tracker" = "https://github.com/xreef/EByte_LoRa_E22_raspberrypi_library/issues"
"Examples" = "https://github.com/xreef/EByte_LoRa_E22_raspberrypi_library/tree/main/examples"
# pyproject.toml file specified at the root of the directory
[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"