# setup.cfg file at the root directory
[metadata]
name = ebyte-lora-e22
version = 0.0.4
author = Renzo Mischianti
description="RaspberryPi LoRa EBYTE E22 device library complete and tested. sx1262/sx1268",
long_description="RaspberryPi Ebyte E22 LoRa (Long Range) library device very cheap and very long range (from 4Km to 10Km). LoRa EBYTE E22 device library complete and tested. sx1262/sx1268",
url = https://github.com/xreef/EByte_LoRa_E22_raspberrypi_library
keywords = LoRa, UART, EByte, RaspberryPi, sx1262, sx1268, e22
[options]
python_requires = >=3.7
# install_requires =
#     pandas
# [options.extras_require]
# test =
#     pytest
#     coverage
[options.package_data]
sample = ['examples/*']
[options.packages.find]
where = src
# [options.entry_points]
# console_scripts =
#     sample=sample:main
# [bdist_wheel]
# universal = 1

